--- a/DemoWeb2/Views/Categories/Delete.cshtml
+++ b/DemoWeb2/Views/Categories/Delete.cshtml
@@ -14,7 +14,7 @@
     <div class="swal-overlay swal-overlay--show-modal">
         <div class="swal-modal">
             <div class="swal-title" style="">Cảnh báo</div>
-            <div class="swal-text" style="">Bạn có chắc chắn là muốn xóa sản phẩm này?</div>
+            <div class="swal-text" style="">Bạn có chắc chắn là muốn xóa danh mục này?</div>
             <div class="swal-footer">
 
                 <div class="swal-button-container">
