--- a/DemoWeb2/Views/Categories/Create.cshtml
+++ b/DemoWeb2/Views/Categories/Create.cshtml
@@ -34,11 +34,10 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-add" />
+                @Html.ActionLink("Trở lại", "Index", null, new { @class = "btn btn-app" })
             </div>
+
         </div>
     </div>
  }
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
     
