--- a/DemoWeb2/Views/Admin/Login.cshtml
+++ b/DemoWeb2/Views/Admin/Login.cshtml
@@ -13,7 +13,7 @@
             @Html.ValidationSummary(true)
             <form action="#" method="post">
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" id="name" name="NameUser" placeholder="Tên" required>
+                    <input type="text" class="form-control" id="name" name="Email" placeholder="Email" required>
                     <div class="input-group-append">
                         <div class="input-group-text">
                             <span class="fas fa-envelope"></span>
@@ -21,7 +21,7 @@
                     </div>
                 </div>
                 <div class="input-group mb-3">
-                    <input type="password" class="form-control" id="pwd" name="PasswordUser" placeholder="Mật khẩu" required>
+                    <input type="password" class="form-control" id="pwd" name="Password" placeholder="Mật khẩu" required>
                     <div class="input-group-append">
                         <div class="input-group-text">
                             <span class="fas fa-lock"></span>
