--- a/DemoWeb2/Views/Products/Index.cshtml
+++ b/DemoWeb2/Views/Products/Index.cshtml
@@ -30,7 +30,7 @@
                         {
                             <label class="col-form-label">
                                 Tìm kiếm:
-                                <div class="input-group input-group-lg">
+                                <div class="input-group input-group-sm">
                                     @Html.TextBox("SearchString", ViewBag.CurrentFilter as string, new { @class = "form-control ", placeholder = "Nhập tên sản phẩm", value = "Lorem ipsum" })
                                     
                                 </div>
